--- a/package.json
+++ b/package.json
@@ -1,19 +1,37 @@
 {
   "name": "touch-drag-button",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "```\r  npm install touch-drag-button\r ```",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config=config/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/houwhu/touch-drag-button.git"
   },
+  "keywords": [],
   "author": "small_knife",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/houwhu/touch-drag-button/issues"
   },
-  "homepage": "https://github.com/houwhu/touch-drag-button#readme"
+  "homepage": "https://github.com/houwhu/touch-drag-button#readme",
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "css-loader": "^0.28.11",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "style-loader": "^0.20.3",
+    "webpack": "^4.3.0",
+    "webpack-dev-server": "3.1.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "webpack-cli": "^3.1.1"
+  }
 }
